{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 272,
  "lineage": "43dec20a-03c3-5352-e205-baf17253779c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app_python_ip_fixo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e42e012c334c81ce",
            "arn": "arn:aws:ec2:us-east-1:374574669347:elastic-ip/eipalloc-0e42e012c334c81ce",
            "domain": "vpc",
            "id": "eipalloc-0e42e012c334c81ce",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-84-33-1.compute-1.amazonaws.com",
            "public_ip": "54.84.33.1",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "app-python-ip_fixo"
            },
            "tags_all": {
              "Name": "app-python-ip_fixo"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a021109b3c62f978",
            "arn": "arn:aws:ec2:us-east-1:374574669347:elastic-ip/eipalloc-0a021109b3c62f978",
            "association_id": "eipassoc-06684741b9a1b07ca",
            "domain": "vpc",
            "id": "eipalloc-0a021109b3c62f978",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0050ec0ef668d3e9b",
            "private_dns": "ip-10-0-1-174.ec2.internal",
            "private_ip": "10.0.1.174",
            "public_dns": "ec2-3-225-200-29.compute-1.amazonaws.com",
            "public_ip": "3.225.200.29",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "poc-nat-eip"
            },
            "tags_all": {
              "Name": "poc-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_python",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:374574669347:instance/i-00e563d55180abc38",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ssm-aplicacoes",
            "id": "i-00e563d55180abc38",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b69c5e16fdfc6eaa",
            "private_dns": "ip-10-0-1-115.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.115",
            "public_dns": "ec2-3-90-88-158.compute-1.amazonaws.com",
            "public_ip": "3.90.88.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-040894384b0cdd980",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-029f53cf180be3cbc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d2ac875b2b0cfec",
            "tags": {
              "Name": "PythonApp"
            },
            "tags_all": {
              "Name": "PythonApp"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-029f53cf180be3cbc"
            ]
          },
          "dependencies": [
            "aws_elasticache_cluster.app_cache",
            "aws_elasticache_subnet_group.app_cache_subnet_group",
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_security_group.sg_aplicacoes",
            "aws_security_group.sg_redis",
            "aws_subnet.subnet_privada",
            "aws_subnet.subnet_publica",
            "aws_vpc.poc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374574669347:internet-gateway/igw-0d9039e57eab00e77",
            "id": "igw-0d9039e57eab00e77",
            "owner_id": "374574669347",
            "tags": {
              "Name": "poc-igw"
            },
            "tags_all": {
              "Name": "poc-igw"
            },
            "vpc_id": "vpc-020d96c5d41cdcd19"
          },
          "dependencies": [
            "aws_vpc.poc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a021109b3c62f978",
            "association_id": "eipassoc-06684741b9a1b07ca",
            "connectivity_type": "public",
            "id": "nat-04ce95e6ed4b0aa9a",
            "network_interface_id": "eni-0050ec0ef668d3e9b",
            "private_ip": "10.0.1.174",
            "public_ip": "3.225.200.29",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00d2ac875b2b0cfec",
            "tags": {
              "Name": "poc-nat-gw"
            },
            "tags_all": {
              "Name": "poc-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.subnet_publica",
            "aws_vpc.poc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374574669347:route-table/rtb-0e2794d360b025054",
            "id": "rtb-0e2794d360b025054",
            "owner_id": "374574669347",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04ce95e6ed4b0aa9a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "poc-private-rt"
            },
            "tags_all": {
              "Name": "poc-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-020d96c5d41cdcd19"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_subnet.subnet_publica",
            "aws_vpc.poc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374574669347:route-table/rtb-01fe14854b3cb07a5",
            "id": "rtb-01fe14854b3cb07a5",
            "owner_id": "374574669347",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d9039e57eab00e77",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "poc-public-rt"
            },
            "tags_all": {
              "Name": "poc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-020d96c5d41cdcd19"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.poc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0527bc27779283461",
            "route_table_id": "rtb-0e2794d360b025054",
            "subnet_id": "subnet-063f81303ecc3fa91"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.subnet_privada",
            "aws_subnet.subnet_publica",
            "aws_vpc.poc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d705cd1487d6e06c",
            "route_table_id": "rtb-0e2794d360b025054",
            "subnet_id": "subnet-065b9b074113b6a28"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.subnet_privada",
            "aws_subnet.subnet_publica",
            "aws_vpc.poc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4b06700329b43e0",
            "route_table_id": "rtb-01fe14854b3cb07a5",
            "subnet_id": "subnet-00d2ac875b2b0cfec"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.subnet_publica",
            "aws_vpc.poc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c21228527060cc86",
            "route_table_id": "rtb-01fe14854b3cb07a5",
            "subnet_id": "subnet-02ee6c2c9d7ee861f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.subnet_publica",
            "aws_vpc.poc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_aplicacoes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374574669347:security-group/sg-029f53cf180be3cbc",
            "description": "HTTP, HTTPS e Redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029f53cf180be3cbc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "sg_aplicacoes",
            "name_prefix": "",
            "owner_id": "374574669347",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-aplicacoes"
            },
            "tags_all": {
              "Name": "sg-aplicacoes"
            },
            "timeouts": null,
            "vpc_id": "vpc-020d96c5d41cdcd19"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.poc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374574669347:security-group/sg-03f0769e0aedc13ee",
            "description": "SG do ElastiCache",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f0769e0aedc13ee",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-029f53cf180be3cbc"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "sg_redis",
            "name_prefix": "",
            "owner_id": "374574669347",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-020d96c5d41cdcd19"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_aplicacoes",
            "aws_vpc.poc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374574669347:subnet/subnet-063f81303ecc3fa91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063f81303ecc3fa91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "374574669347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-private-subnet-1"
            },
            "tags_all": {
              "Name": "poc-private-subnet-1"
            },
            "vpc_id": "vpc-020d96c5d41cdcd19"
          },
          "dependencies": [
            "aws_vpc.poc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374574669347:subnet/subnet-065b9b074113b6a28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065b9b074113b6a28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "374574669347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-private-subnet-2"
            },
            "tags_all": {
              "Name": "poc-private-subnet-2"
            },
            "vpc_id": "vpc-020d96c5d41cdcd19"
          },
          "dependencies": [
            "aws_vpc.poc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374574669347:subnet/subnet-00d2ac875b2b0cfec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d2ac875b2b0cfec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "374574669347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-public-subnet-1"
            },
            "tags_all": {
              "Name": "poc-public-subnet-1"
            },
            "vpc_id": "vpc-020d96c5d41cdcd19"
          },
          "dependencies": [
            "aws_vpc.poc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374574669347:subnet/subnet-02ee6c2c9d7ee861f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ee6c2c9d7ee861f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "374574669347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-public-subnet-2"
            },
            "tags_all": {
              "Name": "poc-public-subnet-2"
            },
            "vpc_id": "vpc-020d96c5d41cdcd19"
          },
          "dependencies": [
            "aws_vpc.poc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "poc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374574669347:vpc/vpc-020d96c5d41cdcd19",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-049b5d636d6fc06d2",
            "default_route_table_id": "rtb-0b4320a44c6ab848c",
            "default_security_group_id": "sg-0f202929606ab85a0",
            "dhcp_options_id": "dopt-0ead3bdb17432faa4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-020d96c5d41cdcd19",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b4320a44c6ab848c",
            "owner_id": "374574669347",
            "tags": {
              "Name": "poc-vpc"
            },
            "tags_all": {
              "Name": "poc-vpc"
            }
          }
        }
      ]
    }
  ]
}